dist_man1_MANS=

if BUILD_TOKYOCOIND
  dist_man1_MANS+=tokyocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=tokyocoin-qt.1
endif

if BUILD_TOKYOCOIN_CLI
  dist_man1_MANS+=tokyocoin-cli.1
endif

if BUILD_TOKYOCOIN_TX
  dist_man1_MANS+=tokyocoin-tx.1
endif

if ENABLE_WALLET
if BUILD_TOKYOCOIN_WALLET
  dist_man1_MANS+=tokyocoin-wallet.1
endif
endif
